--- a/ExamPractice/Week82023.MVC/Week82023.MVC.csproj
+++ b/ExamPractice/Week82023.MVC/Week82023.MVC.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Week8ClassLibrary2023.DataLayer\Week8ClassLibrary2023.DataLayer.csproj" />
   </ItemGroup>
 
